@@ -27,17 +27,17 @@ public class ValueConverter {
 				return (T) value.toString();
 			} else if(Long.class.isAssignableFrom(classTo)) {
 				if(value instanceof Number) {
-					return (T)new Long(((Number)value).longValue());
+					return (T) Long.valueOf(((Number)value).longValue());
 				} else if(value instanceof String){
-					return (T)new Long(Long.parseLong((String)value));
+					return (T) Long.valueOf(Long.parseLong((String)value));
 				} else {
 					throw unsupportedConversionException(classTo, value);
 				}
 			} else if(Integer.class.isAssignableFrom(classTo)) {
 				if(value instanceof Number) {
-					return (T)new Integer(((Number)value).intValue());
+					return (T) Integer.valueOf(((Number)value).intValue());
 				} else if(value instanceof String){
-					return (T)new Integer(Integer.parseInt((String)value));
+					return (T) Integer.valueOf(Integer.parseInt((String)value));
 				} else {
 					throw unsupportedConversionException(classTo, value);
 				}
